syntax = "proto3";

package rpc_msg;

//-------------RPC-------------

enum RPC_OPCODES {
	RPC_None = 0;
	RPC_Multiplexer_Forward = 1;
	RPC_DeMultiplexer_Forward = 2;

	RPC_EchoTest = 10;

	RPC_MysqlDescTable = 401;
	RPC_MysqlQuery = 402;
	RPC_MysqlInsert = 403;
	RPC_MysqlUpdate = 404;
	RPC_MysqlDelete = 405;
	RPC_MysqlQueryByFilter = 406;
	RPC_MysqlMultiQuery = 407;
	RPC_QPS = 999;

	RPC_L2G_LoginPending = 1001;
}

enum RPC_CODE {
	CODE_Ok = 0;
	CODE_Ok_Async = 1;

	CODE_Timeout = 100;
	CODE_Unregister = 101;
	CODE_ParseError = 102;
	CODE_ErrorServerPost = 103; 
	CODE_RouteNotLinkToServer = 104;
	CODE_RouteSendToServerError = 105;
	CODE_OpcodeUnregister = 106;
	CODE_CreateMsgError = 107;
	CODE_LogicThreadNull = 108;
	CODE_NotReceivedReply = 109;
	CODE_NotSend = 110;
	CODE_LoadFromDbError = 111;
	CODE_DirtyFlagZero = 112;
	CODE_QueryError = 113;
	CODE_TableNameNotExistError = 114;
	CODE_GenerateQuerySQLError = 115;
	CODE_NotMatchedResultError = 116;
}


message CHANNEL
{
	uint32 type = 1;  // 服务类型
	uint32 id = 2;    // 服务ID
	uint32 realm = 3; // 区服ID
}

message CONTROLLER 
{
	uint64 serial_num = 1;
	uint64 timeout_ms = 2;
	bool server_stream = 3;
	uint64 seq_id = 4;
}

message RoleIdentifier
{
	uint64 user_id = 1;
	uint32 gw_id = 2;
	uint64 channel_serial_num = 3; // 收到请求时的SOCKET序列号
}

message CLIENT_IDENTIFIER
{
	CHANNEL stub = 1;
	uint64 seq_id = 2;
	bool required_reply = 3;
	CHANNEL router = 4;
	uint64 channel_serial_num = 5; // 收到请求时的SOCKET序列号
	//RoleIdentifier role_identifier = 6;
	bool is_urgency = 7; //是否紧急
}

message SERVER_IDENTIFIER
{
	CHANNEL stub = 1;
}

message RPC_REQUEST
{
	CLIENT_IDENTIFIER client = 1;  // 调用方
	SERVER_IDENTIFIER server = 2;  // 被调用方
	RPC_OPCODES opcodes = 3;
	bool server_stream = 4; //是否连续响应
	bytes args_data = 5;
}

message STATUS
{
	uint32 code = 1;
	string msg = 2;
	bool has_more = 3;
	uint32 offset = 4;
}

message RPC_RESPONSE
{
	CLIENT_IDENTIFIER client = 1; // 调用方（与请求时一致）
	SERVER_IDENTIFIER server = 2; // 被调用方
	STATUS status = 3;
	bool has_more = 4;
	uint32 offset = 5;
	bytes result_data = 6;
}

message PRC_Multiplexer_Forward_Args
{
	RoleIdentifier role_id = 1;
	uint32 opcodes = 2;
	bytes body_msg = 3;
}

message EMPTY
{
}

message PRC_DeMultiplexer_Forward_Args
{
	RoleIdentifier role_id = 1;
	uint32 opcodes = 2;
	bytes body_msg = 3;
}


//测试qps
message MSG_TEST_QPS_REQUEST{
	int64 seq_id = 1;
	int64 star_tm = 2;
	int64 origin_tm = 3;
}
message MSG_TEST_QPS_RESP{
	int32 ret_code = 1;
	MSG_TEST_QPS_REQUEST req = 2;
}



message MSG_RPC_REQUEST_ECHO
{
	uint64 value1 = 1;
	string value2 = 2;
}

message MSG_RPC_RESPONSE_ECHO
{
	uint64 value1 = 1;
	string value2 = 2;
}